--- a/TIW-PlaylistMusicaleJS/src/main/webapp/static/css/style.css
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/static/css/style.css
@@ -5,56 +5,34 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh;
   margin: 0;
-}
-
-.container {
-  text-align: center;
-}
-
-h1 {
-  color: #333333;
-}
-
-h2 {
-  color: #666666;
-}
-
-form {
-  margin-top: 20px;
+  box-sizing: border-box;
 }
 
 table {
   width: 100%;
   border-collapse: collapse;
-}
-
-th,
-td {
-  padding: 8px;
-  text-align: left;
-  border-bottom: 1px solid #dddddd;
-}
-
-th {
-  background-color: #f2f2f2;
+  height: 500px;
+  background-color: #dddddd;
 }
 
 input[type="submit"],
 button {
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #4caf50;
+  background-color: #dddddd;
   color: #ffffff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  position: absolute;
+  right: 20px;
+  transform: translateX(-50%)
 }
 
 input[type="submit"]:hover,
 button:hover {
-  background-color: #45a049;
+  background-color: #dddddd;
 }
 
 a {
@@ -66,14 +44,14 @@ a {
 #previousPlaylistButton,
 #nextPlaylistButton {
   display: inline-block;
-  margin-right: 10px;
+  margin: 10px;
 }
 
 #previousPlaylistButton a,
 #nextPlaylistButton a{
-  padding: 8px 16px;
   background-color: #dddddd;
   border-radius: 4px;
+  padding: 8px;
 }
 
 #previousPlaylistButton a:hover,
@@ -90,7 +68,10 @@ a {
   width: 100%;
   height: 200px;
   background-color: #dddddd;
-  text-align: center;
-  line-height: 200px;
-  font-size: 24px;
+}
+
+.compartment {
+	position: relative;
+	  width: calc(90% - 10vw);
+	  margin: auto;
 }
