--- a/TIW-PlaylistMusicaleJS/src/main/webapp/static/css/style.css
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/static/css/style.css
@@ -7,38 +7,40 @@ body {
   flex-direction: column;
   margin: 0;
   box-sizing: border-box;
+  min-width: 800px;
 }
 
 table {
-  width: 100%;
-  border-collapse: collapse;
-  height: 500px;
-  background-color: #dddddd;
+display: block;
+position: relative;
+  width: min-content;
+  margin: auto;
+    border-spacing: 20px;
 }
+
 
 input[type="submit"],
 button {
   padding: 10px 20px;
   font-size: 16px;
-  background-color: #dddddd;
+  background-color: #333333;
   color: #ffffff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   position: absolute;
   right: 20px;
-  transform: translateX(-50%)
 }
 
 input[type="submit"]:hover,
 button:hover {
-  background-color: #dddddd;
+  background-color: #666666;
 }
 
 a {
+	cursor: pointer;
   text-decoration: none;
   color: #333333;
-  font-weight: bold;
 }
 
 #previousPlaylistButton,
@@ -67,11 +69,94 @@ a {
 #playerContainer {
   width: 100%;
   height: 200px;
-  background-color: #dddddd;
 }
 
 .compartment {
 	position: relative;
-	  width: calc(90% - 10vw);
-	  margin: auto;
+	width: calc(90% - 10vw);
+	height: max-content;
+	margin: auto;
+  	margin-top: 25px;
+}
+
+.playerSong {
+	margin: auto;
+	background-color: #dddddd;
+	width: max-content;
+}
+.playerSong img {
+	width: 300px;
+	height: 300px;
+}
+.playerSong h2 {
+	padding: 0px;
+	margin: 0px;
+}
+.content {
+	background-color: #dddddd;
+	padding: 20px;
+	padding-left: 40px;
+	padding-right: 40px;
+	border-radius: 4px;
+	border-style: none;
+}
+
+tr {
+	position: relative;
+}
+.playlistSong {
+	color: #ffffff;
+	position: relative;
+	background-color: #333333;
+	padding: 5px;
+	border-radius: 4px;
+	border-style: none;
+}
+.playlistSong label:hover {
+		cursor: pointer;
+  font-weight: bold;
+}
+.playlistSong img {
+	width: 100px;
+	aspect-ratio: 1 / 1;
+	height: auto;
+}
+
+input {
+	border-radius: 4px;
+}
+
+select {
+	border-radius: 4px;
+}
+
+option {
+	border-radius: 4px;
+}
+
+#playlist div {
+	color: #ffffff;
+	position: relative;
+	background-color: #333333;
+	padding: 20px;
+	border-radius: 4px;
+	border-style: none;
+	position: relative;
+	margin: 20px;
+	box-sizing: border-box;
+	
+}
+
+#playlist div:hover {
+	background-color: #666666;
+	
+}
+
+#playlist div a {
+	color: #ffffff;
+	position: absolute;
+	right: 20px;
+}
+#playlist div a:hover {
+  font-weight: bold;
 }
