--- a/TIW-PlaylistMusicaleJS/src/main/webapp/static/css/style.css
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/static/css/style.css
@@ -132,3 +132,19 @@ html {
 .footer {
 	height: 100vh;
 }
+
+#errorMain {
+	position: fixed;
+	display: block;
+	z-index: 100;
+	width: 10em;
+	bottom: 20px;
+	right: 20px;
+	background-color: red;
+	color: white;
+	padding: 10px;
+	opacity: 0.5;
+	border-style: none;
+	border-radius: 4px;
+	max-height: 50vh;
+}
