--- a/TIW-PlaylistMusicale/src/main/webapp/static/css/style.css
+++ b/TIW-PlaylistMusicale/src/main/webapp/static/css/style.css
@@ -119,15 +119,21 @@ option {
 .submit:hover {
   background-color: #666666;
 }
-
+a.submit {
+	
+}
 html {
 	scroll-behavior: smooth;
 }
 
 .footer {
-	height: 100vh;
+	width: 100%;
+	height: 10vh;
+	box-sizing: border-box;
 }
-
+.footer .flex {
+	justify-content: center;
+}
 #errorMain {
 	position: fixed;
 	display: block;
