--- a/TIW-PlaylistMusicaleJS/src/main/webapp/static/css/style.css
+++ b/TIW-PlaylistMusicaleJS/src/main/webapp/static/css/style.css
@@ -14,12 +14,12 @@ a {
 	text-decoration: none;
 	color: inherit;
 }
+
 table {
 	position: relative;
-  width: min-content;
-  margin: auto;
+  	width: min-content;
+  	margin: auto;
     border-spacing: 1vw;
-      vertical-align: top;
 }
 
 #song {
@@ -55,17 +55,14 @@ table {
 }
 .interactable:hover {
 	cursor: pointer;
-  font-weight: bold;
+  	font-weight: bold;
 }
 .playlistSong img {
 	aspect-ratio: 1 / 1;
 	width: 10vw;
 	height: auto;
 }
-.playlistSong div {
-	width: 10vw;
-		height: auto;
-}
+
 input {
 	border-radius: 4px;
 }
@@ -84,7 +81,6 @@ option {
 	right: 20px;
 }
 .card {
-	      vertical-align: top;
 	color: #ffffff;
 	position: relative;
 	background-color: #333333;
@@ -96,7 +92,6 @@ option {
 	margin-bottom: 25px;
 	box-sizing: border-box;
 	width: fit-content;
-	
 }
 .card.wide {
 	width: 100%;
@@ -124,15 +119,21 @@ option {
 .submit:hover {
   background-color: #666666;
 }
-
+a.submit {
+	
+}
 html {
 	scroll-behavior: smooth;
 }
 
 .footer {
-	height: 100vh;
+	width: 100%;
+	height: 10vh;
+	box-sizing: border-box;
 }
-
+.footer .flex {
+	justify-content: center;
+}
 #errorMain {
 	position: fixed;
 	display: block;
